Update Search page css and fix alignment of components

--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -55,6 +55,10 @@
   height: 600px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   background-image: url("../../assets/img/CCDC.Hero.1920x1080.png");
   border-bottom: 2px solid white;
 }
